# lykiadb

./: .gitignore  Cargo.toml  INTEGRATION_SUMMARY.md  LICENSE  README.md  TODO  client_server.sh  dev-client.sh
liblykia/: Cargo.toml
liblykia/src/: lib.rs
liblykia/src/protocol/: connection.rs
lykiadb-bench/: .gitignore  Cargo.toml  README.md
lykiadb-bench/benches/: interpreter.rs  parsing.rs
lykiadb-bench/benches/scripts/: fib.ly  filter_square.ly  loop_if_square.ly
lykiadb-bench/benches/scripts/agg/: group_by_mod.ly
lykiadb-bench/benches/scripts/join/: join_10k.ly  loop_flat_10k.ly  loop_nested_10k.ly  scan_flat_10k.ly
lykiadb-bench/src/: main.rs
lykiadb-common/: Cargo.toml
lykiadb-common/src/: lib.rs
lykiadb-common/src/comm/: client.rs  mod.rs  tcp.rs
lykiadb-common/src/error/: mod.rs
lykiadb-common/src/memory/: mod.rs
lykiadb-common/src/testing/: mod.rs  parser.rs
lykiadb-connect/: Cargo.toml
lykiadb-connect/src/: lib.rs  session.rs  tcp.rs
lykiadb-lang/: Cargo.toml
lykiadb-lang/benches/: parsing.rs
lykiadb-lang/src/: lib.rs
lykiadb-lang/src/ast/: builder.rs  expr.rs  mod.rs  sql.rs  stmt.rs  visitor.rs
lykiadb-lang/src/parser/: expr.rs  mod.rs  program.rs  resolver.rs  sql.rs  stmt.rs
lykiadb-lang/src/tokenizer/: scanner.rs  token.rs
lykiadb-lang/src/types/: mod.rs
lykiadb-lang/tests/: tests.rs
lykiadb-lang/tests/lang/: mod.rs
lykiadb-lang/tests/lang/generic/: array_literal.rs  binary.rs  expr.rs  function_call.rs  function_literal.rs  loops.rs  mod.rs  number_literal.rs  object_literal.rs  other_literals.rs  unary.rs  variable.rs
lykiadb-lang/tests/lang/sql/: insert_values.rs  select_compound.rs  select_distinct.rs  select_from.rs  select_group_by.rs  select_join.rs  select_limit.rs  select_order.rs  select_projection.rs  select_where.rs  sql_expr.rs
lykiadb-playground/: Cargo.toml  README.md  components.json  index.html  index.js  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.js  webpack.config.js
lykiadb-playground/app/: editor.tsx  globals.css  layout.tsx  lyqlSyntax.scss  main.tsx  nav.tsx  page.tsx  parser.ts
lykiadb-playground/src/: app.rs  index.js  lib.rs  main.rs  regularizer.rs
lykiadb-playground/styles/: fonts.ts
lykiadb-server/: Cargo.toml  todo
lykiadb-server/benches/: interpreter.rs
lykiadb-server/benches/scripts/: fib.ly  loop_if_square.ly  loop_square.ly  scan_square.ly  while.ly  while.short.ly
lykiadb-server/proptest-regressions/value/: eval.txt
lykiadb-server/src/: error.rs  global.rs  lib.rs  main.rs  tests.rs
lykiadb-server/src/comm/: mod.rs  tcp.rs
lykiadb-server/src/engine/: environment.rs  error.rs  interpreter.rs  interpreter_integration.rs  mod.rs  types.rs
lykiadb-server/src/engine/stdlib/: arr.rs  avg.rs  dtype.rs  fib.rs  json.rs  mod.rs  out.rs  time.rs
lykiadb-server/src/exec/: aggregation.rs  mod.rs
lykiadb-server/src/execution/: dispatching.rs  error.rs  global.rs  mod.rs  session.rs  state.rs
lykiadb-server/src/interpreter/: environment.rs  error.rs  expr.rs  interpreter.rs  loops.rs  mod.rs  output.rs
lykiadb-server/src/interpreter/tests/: expr.lyqltest  ifs.lyqltest  loops.lyqltest  programs.lyqltest
lykiadb-server/src/lang/: mod.rs
lykiadb-server/src/lang/ast/: expr.rs  mod.rs  sql.rs  stmt.rs  visitor.rs
lykiadb-server/src/lang/parser/: mod.rs  program.rs  resolver.rs
lykiadb-server/src/lang/tokenizer/: scanner.rs  token.rs
lykiadb-server/src/libs/: mod.rs
lykiadb-server/src/libs/stdlib/: arr.rs  bench.rs  dtype.rs  json.rs  math.rs  mod.rs  out.rs  time.rs
lykiadb-server/src/net/: mod.rs  tcp.rs
lykiadb-server/src/plan/: aggregates.rs  aggregation.rs  expr.rs  from.rs  mod.rs  planner.rs  scope.rs
lykiadb-server/src/query/: context.rs  mod.rs
lykiadb-server/src/query/exec/: aggregation.rs  mod.rs
lykiadb-server/src/query/plan/: aggregation.rs  error.rs  expr.rs  from.rs  mod.rs  planner.rs  scope.rs
lykiadb-server/src/runtime/: error.rs  mod.rs  types.rs
lykiadb-server/src/runtime/std/: json.rs  time.rs
lykiadb-server/src/session/: context.rs  mod.rs  state.rs
lykiadb-server/src/store/: error.rs  memory.rs  mod.rs
lykiadb-server/src/value/: array.rs  bson_wrapper.rs  callable.rs  conversions.rs  datatype.rs  document.rs  environment.rs  eval.rs  examples.rs  generic_eval.rs  iterator.rs  mod.rs  object.rs  rv_wrapper.rs  std_val.rs  traits.rs  types.rs
lykiadb-server/tests/: tests.rs  util.rs
lykiadb-server/tests/interpreter/: eval  expr  expr.lyqltest  ifs  ifs.lyqltest  loops  loops.lyqltest  programs  programs.lyqltest
lykiadb-server/tests/interpreter/blocks/: nested  nested.lyqltest  resolving_read  resolving_read.lyqltest  resolving_write  resolving_write.lyqltest
lykiadb-server/tests/interpreter/functions/: anonymous  anonymous.lyqltest  hof  hof.lyqltest  resolving_read  resolving_write
lykiadb-server/tests/lang/: mod.rs
lykiadb-server/tests/planner/: aggregation  aggregation.lyqltest  aggregation_err  aggregation_err.lyqltest  compound  compound.lyqltest  filter  filter.lyqltest  from  from.lyqltest  join  join.lyqltest  join.rs  join_err  join_err.lyqltest  limit_offset  limit_offset.lyqltest  mod.rs  order_by  order_by.lyqltest  projection  projection.lyqltest
lykiadb-server/tests/runtime/: blocks.rs  functions.rs  ifs.rs  loops.rs  mod.rs
lykiadb-shell/: Cargo.toml
lykiadb-shell/examples/: compute.lyql  fib.lyql  fn.lyql  group_by.lyql  hof.lyql  objects.lyql  scan_err.lyql  sql.lyql
lykiadb-shell/src/: main.rs
server/: Cargo.toml
server/benches/: interpreter.rs
server/benches/scripts/: fib.ly  for.ly  while.ly
server/examples/: fib.ly  fn.ly  scan_err.ly
server/src/: lib.rs  main.rs
server/src/cli/: mod.rs
server/src/lang/: mod.rs  parser.rs  scanner.rs  serializer.rs  token.rs
server/src/net/: mod.rs
server/src/runtime/: environment.rs  error.rs  eval.rs  interpreter.rs  mod.rs  resolver.rs  types.rs
server/src/util/: mod.rs
server/tests/: tests.rs
server/tests/lang/: mod.rs
server/tests/runtime/: blocks.rs  functions.rs  ifs.rs  loops.rs  mod.rs
(+232 files in other folders)
