[workspace]
resolver= "2"
members = ["lykiadb-server", "lykiadb-shell", "lykiadb-lang", "lykiadb-common", "lykiadb-lsm", "lykiadb-bench"]
edition = "2024"
rust-version = "1.88"

[profile.release]
opt-level = 3
strip = "debuginfo"
debug = true

[profile.bench]
debug = true

[workspace.metadata.scripts]
dev-client = "sh ./dev-client.sh"