[package]
authors = ["Vedat Can Keklik <vcankeklik@gmail.com>"]
name = "liblykia"
version = "0.1.0"
edition = "2021"

[dependencies]
bson = { version = "2.9.0" }
serde = { version = "1.0.188", features=["derive", "rc"] }
bytes = "1.5.0"
tokio = { version = "~1.35.1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "io-util",
    "time",
    "sync",
] }
