[package]
authors = ["Vedat Can Keklik <vcankeklik@gmail.com>"]
name = "lykiadb-common"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.5.0"
bson = { version = "2.9.0" }
ariadne = { version = "0.4.1", features = ["auto-color"] }
tokio = { version = "~1.35.1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "io-util",
    "time",
    "sync",
    "signal"
] }
serde = { version = "1.0.188", features=["derive", "rc"] }
serde_json = "1.0.105"
