[package]
authors = ["Vedat Can Keklik <vcankeklik@gmail.com>"]
name = "lykiadb-connect"
version = "0.1.0"
edition = "2024"

[dependencies]
bson = { version = "2.9.0" }
clap = { version = "4.4.6", features = ["derive"] }
lykiadb-server = { path = "../lykiadb-server" }
serde_json = "1.0.105"
tokio = { version = "~1.35.1" }
bytes = "1.5.0"
serde = { version = "1.0.188", features=["derive", "rc"] }
