[package]
authors = ["Vedat Can Keklik <vcankeklik@gmail.com>"]
name = "lykiadb-lang"
version = "0.1.0"
edition = "2024"

[dependencies]
phf = { version = "0.11", default-features = false, features = ["macros"] }
rustc-hash = "1.1.0"
serde = { version = "1.0.188", features=["derive", "rc"] }
serde_json = "1.0.105"
assert-json-diff = "2.0.2"
derivative = "2.2.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "parsing"
harness = false
