[package]
authors = ["Vedat Can Keklik <vcankeklik@gmail.com>"]
name = "lykiadb-server"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.5.0"
bson = { version = "2.9.0" }
bumpalo = "3.12.2"
lykiadb-lang = { path = "../lykiadb-lang" }
phf = { version = "0.11", default-features = false, features = ["macros"] }
rustc-hash = "1.1.0"
serde = { version = "1.0.188", features=["derive", "rc"] }
serde_json = "1.0.105"
ariadne = { version = "0.4.1", features = ["auto-color"] }
tokio = { version = "~1.35.1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "io-util",
    "time",
    "sync",
    "signal"
] }
tokio-stream = { version = "~0.1.6", features = ["net"] }
tracing = "0.1"
tracing-subscriber = "0.3"
pretty_assertions = "1.4.1"
string-interner = "0.18.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
test_each_file = "0.3.4"

[[bench]]
name = "interpreter"
harness = false