[package]
authors = ["Vedat Can Keklik <vcankeklik@gmail.com>"]
name = "lykiadb-server"
version = "0.1.0"
edition = "2024"

[dependencies]
lykiadb-lang = { path = "../lykiadb-lang" }
rustc-hash = "1.1.0"
serde = { version = "1.0.188", features=["derive", "rc"] }
serde_json = "1.0.105"
tokio = { version = "~1.35.1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "io-util",
    "time",
    "sync",
    "signal"
] }
tokio-stream = { version = "~0.1.6", features = ["net"] }
tracing = "0.1"
tracing-subscriber = "0.3"
pretty_assertions = "1.4.1"
lykiadb-common = { path = "../lykiadb-common" }
thiserror = "1.0"
dyn-clone = "1.0"
interb = "0.1.1"
once_cell = "1.21.3"
smallvec = "1.15.1"
derivative = "2.2.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
test_each_file = "0.3.4"
proptest = "1.4"
