[package]
authors = ["Vedat Can Keklik <vcankeklik@gmail.com>"]
name = "lykiadb-shell"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
lykiadb-connect = { path = "../lykiadb-connect" }
serde_json = "1.0.105"
tokio = { version = "~1.35.1" }
rustyline = "17.0.1"