[package]
authors = ["Vedat Can Keklik <vcankeklik@gmail.com>"]
name = "lykiadb-shell"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
lykiadb-common = { path = "../lykiadb-common" }
serde_json = "1.0.105"
tokio = { version = "~1.49.0" }
rustyline = "17.0.1"