[package]
authors = ["Vedat Can Keklik <vcankeklik@gmail.com>"]
name = "lykiadb-server"
version = "0.1.0"
edition = "2021"

[dependencies]
liblykia = { path = "../liblykia" }
bson = { version = "2.9.0" }
bumpalo = "3.12.2"
phf = { version = "0.11", default-features = false, features = ["macros"] }
rustc-hash = "1.1.0"
serde = { version = "1.0.188", features=["derive", "rc"] }
serde_json = "1.0.105"
ariadne = { features = ["auto-color"] }
assert-json-diff = "2.0.2"
tokio = { version = "~1.35.1" }
tokio-stream = { version = "~0.1.6", features = ["net"] }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "interpreter"
harness = false
